fixing views
